Second SqlGui Upload

--- a/WebContent/menu.html
+++ b/WebContent/menu.html
@@ -25,13 +25,15 @@
 			<td id="opt"><a href="search.html">Search</a></td>
 		</tr>
 		<tr>
-			<td id="opt"><a href="view.jsp">View All</a></td>
+			<td id="opt"><a href="CServlet">View All</a></td>
 		</tr>
 	</table>
 </div >
 <div id="main">
 <h1>Welcome to SqlGui</h1>
-<a href="Index.html"><input type="button" value="Log Out"></a>
+<form action="LogOut">
+<input type="submit" name="job" value="Log Out">
+</form>
 </div>
 </body>
 </html>
