--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -4,6 +4,7 @@
 <meta charset="ISO-8859-1">
 <title>Login</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<script src="validate.js"></script>
 </head>
 <body>
 
@@ -12,17 +13,17 @@
 </div>
 <div id="main">
 <h1>Welcome to SqlGui Home page</h1>
-<form action="Login" method="post" >
+<form action="Login" method="post" name="myForm" onsubmit="return validateForm1()" >
 <h3>Login</h3>
-<table>
+<table id="maint">
 	<tr>
-		<td>User</td><td><input type="text" name="userName" /></td>
+		<td>User</td><td><input type="text" name="userName" placeholder="Username"/></td>
 	</tr>
 	<tr>
-		<td>Password</td><td><input type ="password" name="pwd"></td>
+		<td>Password</td><td><input type ="password" name="pwd" placeholder="Password"></td>
 	</tr>
 	<tr>
-		<td><input type="submit" name="task" value="Login"/></td><td></td>
+		<td></td><td><input type="submit" name="task" value="Login"/></td>
 	</tr>	
 </table>
 </form>
