--- a/WebContent/delete.html
+++ b/WebContent/delete.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Delete</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<script src="validate.js"></script>
 </head>
 <body>
 
@@ -25,17 +26,17 @@
 			<td id="opt"><a href="search.html">Search</a></td>
 		</tr>
 		<tr>
-			<td id="opt"><a href="view.jsp">View All</a></td>
+			<td id="opt"><a href="CServlet">View All</a></td>
 		</tr>
 	</table>
 </div >
 <div id="main">
 <h1>Delete </h1>
-<form action="DServlet">
+<form action="CServlet" name="myForm" onsubmit="return validateId()">
 <table id="maint">
 	<tr>
 		<td>Id : </td>
-		<td><input type="text" name ="id"/></td>
+		<td><input type="text" name ="id" placeholder="Enter Id"/></td>
 		<td><input type="Submit" value="Delete" name="job"></td>
 		<td><a href="menu.html"><input type="button" value="Back"></a></td>
 	</tr>
