--- a/WebContent/insert.html
+++ b/WebContent/insert.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Insert</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <script src="validate.js"></script>
 </head>
@@ -32,16 +32,16 @@
 </div >
 <div id="main">
 	<h1>Insert </h1>
-	<form action="IServlet" onsubmit="return validateForm()">
+	<form action="CServlet" name="myForm" onsubmit="return validateForm1()">
 		<table id ="maint">
 		<tr>
-			<td>Id:</td><td><input type="text" name ="id"/></td>
+			<td>Id:</td><td><input type="text" name ="id" placeholder="Enter Id"/></td>
 		</tr>
 		<tr>
-		<td>Name :</td><td> <input type="text" name="name"/></td>
+		<td>Name :</td><td> <input type="text" name="name" placeholder="Enter Name"/></td>
 		</tr>
 		<tr>
-		<td>Salary :</td><td><input type="text" name="sal"></td>
+		<td>Salary :</td><td><input type="text" name="sal"placeholder="Enter Salary"></td>
 		</tr>
 		<tr>
 		<td><input type="Submit" value="Insert" name="job" ></td><td><a href="menu.html"><input type="button" value="Back"></a></td>
